--- a/css/styles.css
+++ b/css/styles.css
@@ -11417,22 +11417,25 @@ header.masthead .masthead-heading {
 #galerija .gallery-box {
   position: relative;
   display: block;
+  padding: 5px;
+  box-shadow: 8px 16px 16px rgba(0, 0, 0, 0.25);
 }
 #galerija .gallery-box .gallery-box-caption {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 98%;
+  height: 99%;
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   text-align: center;
   opacity: 0;
   color: #fff;
   background: rgba(242, 170, 0, 0.9);
   transition: opacity 0.25s ease;
   text-align: center;
+  padding: 5px;
 }
 #galerija .gallery-box .gallery-box-caption .project-category {
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
